# volcano

./: .gitignore  Cargo.toml  Dioxus.toml  README.md
server/: Cargo.toml
server/src/: handlers.rs  main.rs
src/: app.rs  fs.rs  index.css  main.rs
volcano_parser/: Cargo.toml
volcano_parser/src/: lib.rs  parse.rs
volcano_parser_v2/: Cargo.toml
volcano_parser_v2/src/: lib.rs  types.rs
webui/: Cargo.toml  Dioxus.toml  build.rs  index.html
webui/src/: app.rs  fs.rs  get_notes.rs  main.rs
webui/src/components/: note_view.rs
webui/src/css/: index.scss
