[package]
name = "webui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "0.3.2"
dioxus-web = "0.3.1"
log = "0.4.17"
volcano_parser = { path = "../volcano_parser" }
wasm-logger = "0.2.0"
katex = { version = "0.4.6", default-features = false, features = ["wasm-js"] }
reqwest-wasm = { version = "0.11.16", features = ["blocking", "json"] }

[build-dependencies]
rsass = "0.27.0"
